fix: assure results are visible by opening them at the top when necessary

--- a/src/blocks/frontend/live-search/style.scss
+++ b/src/blocks/frontend/live-search/style.scss
@@ -8,7 +8,7 @@
 		z-index: 30;
 		border: 1px solid rgba(49, 50, 51, 0.12);
 		margin-top: 10px;
-		max-height: 500px;
+		margin-bottom: 10px;
 		overflow-y: auto;
 	}
 
@@ -58,6 +58,7 @@
 				flex-direction: column;
 				justify-content: center;
 				overflow: hidden;
+				text-align: left;
 
 				.meta {
 					opacity: .65;
@@ -65,7 +66,7 @@
 				}
 
 				.post-title {
-					margin: 0 auto 0 0;
+					margin: 0;
 					white-space: nowrap;
 					text-overflow: ellipsis;
 					overflow: hidden;
